<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:inputType="none"
        android:onClick="setTime"
        android:text="@string/_00_00"
        android:textColor="@color/purple_200"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:enabled="true"
        android:onClick="saveChanges"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/typeToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:checkedButton="@id/shakeBtn"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rotateBtn"
            style="@style/type_selector_button_style"
            android:insetLeft="5dp"
            android:text="@string/rotate"
            app:icon="@drawable/ic__48_smartphone_rotate_arrow_outline"
            app:iconGravity="textTop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shakeBtn"
            style="@style/type_selector_button_style"
            android:insetRight="5dp"
            android:text="@string/shake"
            app:icon="@drawable/ic__49_smartphone_shake_outline"
            app:iconGravity="textTop" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/title"
        android:inputType="textAutoCorrect"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>